2006-11-20  Matthias Wimmer  <m@tthias.eu>

    * xdb_sql/xdb_sql.cc: fixing big bug introduced with the latest change
    	that my cause crashes of jabberd14
    * dialback/dialback.c: fixing the tls='force' and auth options for s2s
    * dialback/dialback_in.c: fixing bug #74

2006-11-19  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_register.c: improved error message
    * xdb_sql/xdb_sql.cc: fixing a problem with xdb_sql handling big data

2006-11-18  Matthias Wimmer  <m@tthias.eu>

    * jabberd/jabberd.c: added note about future package name change
    * dialback/dialback.c: fixing compiler warning
    * jsm/modules/mod_register.c: new registration/XEP-0077 handling,
	configuration options to disable password changes, registration
	updates, or account deletion
    * jsm/modules/mod_auth_digest.c: same
    * jsm/modules/mod_auth_plain.c: same
    * jsm/modules/mod_auth_crypt.c: same
    * jsm/jsm.h: same

2006-11-13  Matthias Wimmer  <m@tthias.eu>

    * jsm/authreg.c: new event e_PRE_REGISTER
    * jsm/jsm.h: same
    * jsm/mod_useridpolicy.c: using new event e_PRE_REGISTER, and bugfix
    * jsm/jsm.h: earlier freeing of memory on config access
    * jsm/authreg.c: same
    * jsm/deliver.c: same
    * jsm/jsm.c: same
    * jsm/util.c: same
    * jsm/modules/mod_admin.c: same
    * jsm/modules/mod_agents.c: same
    * jsm/modules/mod_auth_crypt.c: same
    * jsm/modules/mod_auth_digest.c: same
    * jsm/modules/mod_auth_plain.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_disco.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_log.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_useridpolicy.c: same
    * jsm/modules/mod_vcard.c: same
    * jsm/modules/mod_version.c: same
    * jabberd/lib/xmlnode.c: more xpath support in xmlnode_get_tags()
    * jsm/authreg.c: XEP-0077 support, check registration requests